<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.frazew.virtualgyroscope.gui.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_module_information"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/grey_800" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_version"
                android:id="@+id/version"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/grey_800" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/versionValue"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/version"
                android:layout_toEndOf="@+id/version"
                android:text="..."
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_accelerometer"
                android:id="@+id/accelerometer"
                android:textColor="@color/grey_800"
                android:layout_below="@+id/versionValue"
                android:layout_alignLeft="@+id/version"
                android:layout_alignStart="@+id/version" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/accelerometerValue"
                android:text="..."
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/accelerometer"
                android:layout_toRightOf="@+id/accelerometer"
                android:layout_toEndOf="@+id/accelerometer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_accelerometer_values"
                android:id="@+id/accelerometerValuesText"
                android:textColor="@color/grey_800"
                android:layout_below="@+id/accelerometerValue"
                android:layout_alignLeft="@+id/accelerometer"
                android:layout_alignStart="@+id/accelerometer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/accelerometerValuesTextValues"
                android:text="..."
                android:layout_below="@+id/accelerometerValuesText"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_magnetic_sensor"
                android:id="@+id/magneticSensor"
                android:textColor="@color/grey_800"
                android:layout_below="@+id/accelerometerValuesTextValues"
                android:layout_alignLeft="@+id/accelerometerValuesText"
                android:layout_alignStart="@+id/accelerometerValuesText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/magneticSensorValue"
                android:text="..."
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/magneticSensor"
                android:layout_toRightOf="@+id/magneticSensor"
                android:layout_toEndOf="@+id/magneticSensor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_magnetic_values"
                android:id="@+id/magneticValuesText"
                android:textColor="@color/grey_800"
                android:layout_below="@+id/magneticSensorValue"
                android:layout_alignLeft="@+id/magneticSensor"
                android:layout_alignStart="@+id/magneticSensor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/magneticValuesTextValues"
                android:text="..."
                android:layout_below="@+id/magneticValuesText"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_gyroscope"
                android:id="@+id/gyroscope"
                android:textColor="@color/grey_800"
                android:layout_below="@+id/magneticValuesTextValues"
                android:layout_alignLeft="@+id/magneticValuesText"
                android:layout_alignStart="@+id/magneticValuesText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/gyroscopeValue"
                android:text="..."
                android:layout_marginLeft="5dp"
                android:layout_alignTop="@+id/gyroscope"
                android:layout_toRightOf="@+id/gyroscope"
                android:layout_toEndOf="@+id/gyroscope" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_gyroscope_values"
                android:id="@+id/gyroscopeValuesText"
                android:textColor="@color/grey_800"
                android:layout_below="@+id/gyroscopeValue"
                android:layout_alignLeft="@+id/gyroscope"
                android:layout_alignStart="@+id/gyroscope" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/gyroscopeValuesTextValues"
                android:text="..."
                android:layout_below="@+id/gyroscopeValuesText"
                android:layout_centerHorizontal="true"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/str_theoretical_values"
                android:id="@+id/gyroscopeTheoryValuesText"
                android:textColor="@color/grey_800"
                android:layout_below="@+id/gyroscopeValuesTextValues"
                android:layout_alignLeft="@+id/gyroscopeValuesText"
                android:layout_alignStart="@+id/gyroscopeValuesText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/gyroscopeTheoryValues"
                android:text="..."
                android:layout_below="@+id/gyroscopeTheoryValuesText"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
